# igneous

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md
cmake/: FindMono.cmake  UseFastnoise.cmake  UseStb.cmake  add_shaders.cmake  macros.cmake
dependencies/: CMakeLists.txt  fastnoisesimd.cmake  stb.cmake  versions.txt
dependencies/imgui/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
docs/ext/breathe/: LICENSE
docs/source/: conf.py  gui.rst  index.rst
docs/source/_static/: style.css
docs/source/api/: ecs.rst  gui.rst  input.rst  physics.rst  renderer.rst
engine/: CMakeLists.txt
engine/igneous/: CMakeLists.txt
engine/igneous/audio/: audio.cpp
engine/igneous/console/: conVar.hpp  console.cpp  console.hpp  console_sink.hpp
engine/igneous/core/: igneous.cpp  log.cpp
engine/igneous/ecs/components/: modelComponent.hpp
engine/igneous/ecs/systems/: captureSystem.cpp  rendererSystem.cpp  skySystem.cpp  skySystem.hpp
engine/igneous/ecs/systems/sky/: dynamicValueController.cpp  dynamicValueController.hpp  proceduralSky.cpp  sunController.cpp
engine/igneous/renderer/: camera.hpp  capture.cpp  capture.hpp  fpsCamera.cpp  fpsCamera.hpp  model.cpp  renderer.cpp  scene.cpp
engine/igneous/src/: igneous.hpp
engine/igneous/src/audio/: audio.hpp
engine/igneous/src/console/: console.cpp  console_sink.hpp
engine/igneous/src/core/: game.hpp  igneous.cpp  input.cpp  input.hpp  log.hpp
engine/igneous/src/ecs/components/: cubeComponent.hpp
engine/igneous/src/ecs/systems/: moveSystem.cpp  moveSystem.hpp
engine/igneous/src/ecs/systems/sky/: proceduralSky.hpp
engine/igneous/src/gui/: gui.cpp  gui.hpp
engine/igneous/src/physics/: physics.cpp
engine/igneous/src/renderer/: camera.cpp  camera.hpp  fpsCamera.cpp  fpsCamera.hpp  renderer.cpp  renderer.hpp  scene.hpp  splash_shaders.hpp
engine/libigneous/: CMakeLists.txt  Console.cs  Events.cs  Input.cs
engine/tools/proj_gen/: proj_gen.ps1
igneous/: CMakeLists.txt
igneous/include/igneous/: audio.hpp  console.hpp  core.hpp  ecs.hpp  gui.hpp  igneous.hpp  log.hpp  physics.hpp  renderer.hpp
igneous/include/igneous/audio/: audio.hpp  channel.hpp  listener.hpp
igneous/include/igneous/camera/: fpsCamera.hpp
igneous/include/igneous/console/: conVar.hpp  console.hpp  console_sink.hpp
igneous/include/igneous/core/: debug.hpp  game.hpp  igneous.hpp  input.hpp  log.hpp  version.hpp
igneous/include/igneous/ecs/: ecs.hpp  ecs.inl
igneous/include/igneous/ecs/components/: modelComponent.hpp  transformationComponent.hpp
igneous/include/igneous/ecs/systems/: captureSystem.hpp  rendererSystem.hpp
igneous/include/igneous/gui/: gui.hpp
igneous/include/igneous/physics/: physics.hpp
igneous/include/igneous/renderer/: asset_shaders.hpp  camera.hpp  capture.hpp  fpsCamera.hpp  material.hpp  model.hpp  renderer.hpp  renderer.inl  splash_shaders.hpp  vertex.hpp
igneous/res/shaders/: vs_splash.sc
igneous/shaders/: fs_debug.sc  varying.def.sc
igneous/src/audio/: audio.cpp  audio.hpp  audio_p.hpp  channel.cpp  channel.hpp  source.cpp  source.hpp
igneous/src/console/: conVar.cpp  conVar_p.hpp  console.cpp  console.hpp  console_p.hpp  console_sink.hpp
igneous/src/core/: consoleSink.hpp  igneous.cpp  igneous.hpp  igneous_p.hpp  input.cpp  input.hpp  input_p.hpp  log.cpp  log.hpp  version.hpp
igneous/src/ecs/: ecs.cpp
igneous/src/ecs/components/: modelComponent.hpp  transformationComponent.hpp
igneous/src/ecs/systems/: captureSystem.cpp  rendererSystem.cpp
igneous/src/gui/: gui.cpp  imgui_assets.h
igneous/src/physics/: debugRenderer.cpp  debugRenderer.hpp  debug_assets.h  physics.cpp  physics.hpp  physics_p.hpp
igneous/src/renderer/: aviwriter.hpp  camera.cpp  camera.hpp  capture.cpp  capture_p.hpp  fpsCamera.cpp  igneous_assets.h  model.cpp  model.hpp  renderer.cpp  renderer.hpp  renderer_p.hpp  splashShaders.hpp  splash_assets.h  splash_shaders.hpp
res/models/: Barn.mtl  Bus.blend  Bus.fbx  Bus.mtl  SchoolBus.mtl
res/models/BigBarn/: BigBarn.mtl
res/models/crossfire/: crossfire.mtl
res/models/vokselia_spawn/: vokselia_spawn.mtl
samples/: CMakeLists.txt
samples/sandbox/: .igneous  CMakeLists.txt  Sandbox.cs
samples/sandbox/res/materials/: black.mtl  dark_red.mtl  light_red.mtl  white.mtl
samples/sandbox/res/models/: barn.dae  barn.mdl
samples/sandbox/res/models/barn/: barn.dae
samples/sandbox/res/shaders/: vs_bunny.sc
samples/sandbox/res/vertex/: color.vtx  position.vtx  texture.vtx
samples/sandbox/shaders/: fs_bunny.sc  fs_poly.sc  varying.def.sc  vs_poly.sc  vs_sky.sc  vs_splash.sc
samples/sandbox/src/: sandbox.cpp
samples/sandbox/src/ecs/systems/: skySystem.cpp  skySystem.hpp
samples/sandbox/src/ecs/systems/sky/: dynamicValueController.cpp  proceduralSky.cpp  proceduralSky.hpp  sunController.cpp  sunController.hpp
shaders/: fs_bunny.sc  fs_cubes.sc  fs_sky.sc  fs_splash.sc  varying.def.sc  vs_bunny.sc  vs_cubes.sc
src/: igneous.cpp  version.h.in
src/components/: cameraComponent.h  modelComponent.h  transformationComponent.h
src/modules/console/: Console.cpp  Console.h  conVar.h  (+1 more)
src/servers/: audioServer.cpp  audioServer.h  physicsServer.cpp  physicsServer.h  rendererServer.cpp  rendererServer.h
src/systems/: captureSystem.cpp  captureSystem.h  moveSystem.cpp  moveSystem.h  rendererSystem.cpp  rendererSystem.h  skySystem.cpp  skySystem.h
src/util/: aviwriter.h  camera.cpp  camera.h  capture.cpp  capture.h  fpsCamera.cpp  fpsCamera.h  input.cpp  input.h  log.cpp  log.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  terrain.cpp  terrain.h
test/: CMakeLists.txt  main.cpp
test/igneous/: CMakeLists.txt  console.cpp  consoleTest.cpp
tools/: CMakeLists.txt
tools/asset_gen/: CMakeLists.txt  bin2c.cpp  footer.txt  header.h  header.txt  strings.h
tools/modelc/: CMakeLists.txt  modelc.cpp
tools/ziggurat/: CMakeLists.txt  copy.cpp  create.cpp  material.cpp  model.cpp  stampList.cpp  ziggurat.cpp  ziggurat.hpp
(+8 files in other folders)
